test/semantic/Sentencias/fail07.gluck
location Sentencias;
use system.io;

start:function {
	a(true);
}

a: function x:bool { 
	z: int;
	if (x) { 
		z = 0; 
	} 
	print(z); // error: no se puede asegurar que z haya sido inicializada
} 
